<resources>
    <string name="app_name">iVote</string>
    <string name="appName">iVote.</string>
    <string name="logIn">Log In</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="enterEmailAddress">Enter email address.</string>
    <string name="enterPassword">Enter password.</string>
    <string name="register">Register</string>
    <string name="enterName">Enter your name.</string>
    <string name="enterSurname">Enter your surname.</string>
</resources>