<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/ubuntu_mono_bold"
        android:text="@string/appName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/enterEmailAddress"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#FFDAF0F3"
        android:textColorHint="#FFDAF0F3"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#FFDAF0F3"
        android:textColorHint="#FFDAF0F3"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/button"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="110dp"
        android:backgroundTint="#2C64C6"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/logIn"
        android:onClick="redirectToDisplayPolls"
        android:textColor="#E8EAF6"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="156dp"
        android:layout_height="25dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="134dp"
        android:layout_marginBottom="76dp"
        android:text="@string/noAccount"
        android:textColor="#041B27"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="109dp"
        android:layout_height="75dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/ubuntu"
        android:onClick="redirectToRegister"
        android:text="@string/signUp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>