<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="124dp"
        android:layout_height="38dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="144dp"
        android:fontFamily="@font/ubuntu"
        android:lineSpacingExtra="16sp"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="135dp"
        android:fontFamily="@font/ubuntu_mono_bold"
        android:text="@string/appName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/enterName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#DAF0F3"
        android:textColorHint="#DAF0F3"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/enterSurname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#DAF0F3"
        android:textColorHint="#DAF0F3"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/enterEmailAddress"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#FFDAF0F3"
        android:textColorHint="#FFDAF0F3"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#DAF0F3"
        android:textColorHint="#FFDAF0F3"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <Button
        android:id="@+id/registerButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="89dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/ubuntu"
        android:text="@string/signUp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:onClick="registerNewAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />


</androidx.constraintlayout.widget.ConstraintLayout>